Add images/Modify index and style
I added the rest of the code to both index and style to complete the webpage

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OP Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <!--Website Header-->
     <div class="header">
         <h1 class="logo">Header Logo</h1>
         <ul class="links">
@@ -27,6 +31,47 @@
             <p>this is a placeholder for an image</p>
         </div>
     </div>
+
+    <!--Website Body-->
+
+    <h3>Some Random Information</h3>
+    <div class="body-cont">
+        <div class="img-content">
+        <img src="./images/kit01.jpg" alt="Hello Kitty">
+            <p class="imgtext">This is a subject under an image placeholder</p>
+        </div>
+        <div class="img-content">
+        <img src="./images/kit02.jpg" alt="Cinamoroll">
+            <p class="imgtext">This is also a subject under an image placeholder</p>
+        </div>
+        <div class="img-content">
+        <img src="./images/kit03.jpg" alt="Keroppi">
+            <p class="imgtext">This is subject under an image placeholder but has a bit more text than the others</p>
+        </div>
+        <div class="img-content">
+        <img src="./images/kit04.jpg" alt="Pompompurin">
+            <p class="imgtext">This subject is under an image placeholder</p>
+        </div>
+    </div>
+
+    <!--Quote-->
+    <div class="quote">
+        <p class="quote-text">Well done. here come the test results: "You are a horrible person." That's what it says: a horrible person. We weren't even testing for that.</p>
+        <p class="quoter">-Portal 2</p>
+    </div>
+
+    <!--Footer-->
+    <div class="footer">
+        <div class="footertext">
+        <p class="urine utwo">Call to action! It's time!</p>
+        <p class="urine">Sign up for the very real product on the button to the right!</p>
+        </div>
+        <button class="footbutt">Sign Up</button>
+    </div>
+
+    <!--Actual Footer (I was too lazy to rename stuff sorry)-->
+    <p class="realfoot">Copyright The Odin Project 2021</p>
+
 </body>
 
 </html
